--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-    <p id="color">#000000</p>
+    <p id="color">Moritz</p>
     <script>
         function randomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1) + min);
@@ -111,7 +111,7 @@
 
                 document.documentElement.style.setProperty('--color', 'hsl(' + h + ', ' + s + '%, ' + l + '%)');
                 var hex = hslToHex(h, s, l);
-                document.title = hex;
+                document.title = "Moritz";
                 colorElement.innerHTML = hex;
                 document.documentElement.style.setProperty('--color-transparent', hex + '22');
 
