--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 document.documentElement.style.setProperty('--color', 'hsl(' + h + ', ' + s + '%, ' + l + '%)');
                 var hex = hslToHex(h, s, l);
                 document.title = "Moritz";
-                colorElement.innerHTML = "Moritz;
+                colorElement.innerHTML = "Moritz";
                 document.documentElement.style.setProperty('--color-transparent', hex + '22');
 
                 setFavicon(hex);
